// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleBlock.vue renders correctly 1`] = `
<div class="rule">
  <hr>
  <shadowinput-stub></shadowinput-stub>
</div>
`;

exports[`RuleBlock.vue renders correctly(preview mode) 1`] = `
<div class="rule">
  <hr>
</div>
`;
